# TWEED_SC2

./: pyproject.toml
tweed_sc2/useful_notes/: 1_note_on_foundational_libraries.md  2_note_on_machine_learning.md  3_note_on_dynamic_file_operations.md  4_note_on_interpolation.md  5_note_on_curve_fitting.md  6_note_on_wind_direction.md  7_note_on_packaging.md  README.md
tweed_sc2/wind_power_forecasting/: README.md
tweed_sc2/wind_power_forecasting/inputs/: Location1_test.csv  Location1_train.csv  Location2_test.csv  Location2_train.csv  Location3_test.csv  Location3_train.csv  Location4_test.csv  Location4_train.csv
